--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -9,6 +9,35 @@ body
 a
   color: #00B7FF
 
-#pg-index
-  p
-    color #888
+td
+  vertical-align top
+  padding 30px
+  textarea
+    height 600px
+    width 400px
+
+.branches
+  margin 0
+  padding 10px 0 0
+  list-style none
+  width 150px
+  hr
+    margin 10px 0
+    border 0 none
+    border-top 1px solid #ccc
+  a
+    text-decoration none
+  .current
+    a
+      font-weight bold
+h1
+  margin-top 0
+.merge
+  float right
+  margin-top 8px
+
+#diff
+  display none
+  background #fff
+  border-radius 5px
+  padding 50px
