--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,4 +16,5 @@ html
 
     script(src="/javascripts/jquery.min.js")
     script(src=`/javascripts/utils.js?${cache}`)
+    script(src=`/javascripts/jquery.lightbox_me.js?${cache}`)
     script(src=`/javascripts/script.js?${cache}`)
