--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -41,3 +41,14 @@ h1
   background #fff
   border-radius 5px
   padding 50px
+
+#history
+  display none
+  background #fff
+  border-radius 5px
+  padding 50px
+
+.pull-right
+  float right
+  a
+    text-decoration none
