--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -52,3 +52,10 @@ h1
   float right
   a
     text-decoration none
+
+.repo
+  margin-top 20px
+  border 1px solid #BBB
+  color #888
+  padding 6px
+  border-radius 3px
