--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,7 @@ block content
           li
             hr
             a(href="" class="fork") #[i.fa.fa-plus] Create branch
+          input.repo(value="root@143.110.158.133:test.git")
       td
         form(method="POST" action="/save")
           if branch !== 'main'
