--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -59,3 +59,12 @@ h1
   color #888
   padding 6px
   border-radius 3px
+
+.advanced
+  color #999
+  margin-top 20px
+  display block
+  font-size 11px
+
+.repo
+  display none
