--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,3 +18,6 @@ html
     script(src=`/javascripts/utils.js?${cache}`)
     script(src=`/javascripts/jquery.lightbox_me.js?${cache}`)
     script(src=`/javascripts/script.js?${cache}`)
+
+    link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/default.min.css")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js")
