--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -68,3 +68,22 @@ h1
 
 .repo
   display none
+
+.sidebar
+  width 250px
+
+#add
+  text-decoration none
+  margin-left 10px
+
+#reset
+  position absolute
+  bottom 15px
+  left 15px
+  padding 8px 15px
+  background #eee
+  border-radius 4px
+  text-decoration none
+
+.time
+  opacity 0.5
