--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,9 @@ html
     script(src="/javascripts/jquery.min.js")
     script(src=`/javascripts/utils.js?${cache}`)
     script(src=`/javascripts/jquery.lightbox_me.js?${cache}`)
+    script(src="https://code.jquery.com/ui/1.13.1/jquery-ui.js")
     script(src=`/javascripts/script.js?${cache}`)
 
     link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/default.min.css")
     script(src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js")
+
